// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`listParameters gets parameters 1`] = `
"[90m┌───────────────────────────────────────────────[39m[90m┬─────────────[39m[90m┬────────────[39m[90m┬──────────────────────────────────────────────────────┐[39m
[90m│[39m[31m Name                                          [39m[90m│[39m[31m Environment [39m[90m│[39m[31m Updated by [39m[90m│[39m[31m Updated at                                           [39m[90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼──────────────────────────────────────────────────────┤[39m
[90m│[39m DEPLOY_SERVICE_STEP_FUNCTION_NAME             [90m│[39m development [90m│[39m severus    [90m│[39m Friday, July 12th, 2019, 12:21:37 AM (GMT+0000)      [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼──────────────────────────────────────────────────────┤[39m
[90m│[39m DEPLOY_SERVICE_STEP_FUNCTION_WRAPPER_NAME     [90m│[39m development [90m│[39m severus    [90m│[39m Thursday, October 3rd, 2019, 7:44:53 PM (GMT+0000)   [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼──────────────────────────────────────────────────────┤[39m
[90m│[39m GRAPHQL_ENDPOINT                              [90m│[39m all         [90m│[39m serious    [90m│[39m Thursday, November 29th, 2018, 9:26:47 PM (GMT+0000) [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼──────────────────────────────────────────────────────┤[39m
[90m│[39m GRAPHQL_ENDPOINT                              [90m│[39m production  [90m│[39m serious    [90m│[39m Thursday, November 29th, 2018, 9:26:47 PM (GMT+0000) [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼──────────────────────────────────────────────────────┤[39m
[90m│[39m PAGERDUTY_E2E_STEP_FUNCTION_INTEGRATION_TOKEN [90m│[39m all         [90m│[39m rubeus     [90m│[39m Monday, April 13th, 2020, 10:49:25 PM (GMT+0000)     [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼──────────────────────────────────────────────────────┤[39m
[90m│[39m PAGERDUTY_E2E_TEST_FAILURES_INTEGRATION_TOKEN [90m│[39m all         [90m│[39m rubeus     [90m│[39m Tuesday, April 21st, 2020, 9:32:08 PM (GMT+0000)     [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼──────────────────────────────────────────────────────┤[39m
[90m│[39m PHABRICATOR_CONDUIT_TOKEN                     [90m│[39m all         [90m│[39m serious    [90m│[39m Friday, November 23rd, 2018, 7:25:09 PM (GMT+0000)   [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼──────────────────────────────────────────────────────┤[39m
[90m│[39m PRISMA_ENDPOINT                               [90m│[39m all         [90m│[39m serious    [90m│[39m Friday, November 23rd, 2018, 7:26:02 PM (GMT+0000)   [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼──────────────────────────────────────────────────────┤[39m
[90m│[39m PRISMA_MANAGEMENT_API_SECRET                  [90m│[39m all         [90m│[39m serious    [90m│[39m Tuesday, January 22nd, 2019, 8:46:29 PM (GMT+0000)   [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼──────────────────────────────────────────────────────┤[39m
[90m│[39m SENTRY_DSN                                    [90m│[39m all         [90m│[39m serious    [90m│[39m Friday, November 23rd, 2018, 7:27:19 PM (GMT+0000)   [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼──────────────────────────────────────────────────────┤[39m
[90m│[39m SENTRY_ENVIRONMENT                            [90m│[39m all         [90m│[39m serious    [90m│[39m Sunday, November 25th, 2018, 9:11:45 PM (GMT+0000)   [90m│[39m
[90m└───────────────────────────────────────────────[39m[90m┴─────────────[39m[90m┴────────────[39m[90m┴──────────────────────────────────────────────────────┘[39m"
`;

exports[`listParameters gets parameters, using nextToken 1`] = `
"[90m┌───────────────────────────────────────────────[39m[90m┬─────────────[39m[90m┬────────────[39m[90m┬──────────────────────────────────────────────────────┐[39m
[90m│[39m[31m Name                                          [39m[90m│[39m[31m Environment [39m[90m│[39m[31m Updated by [39m[90m│[39m[31m Updated at                                           [39m[90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼──────────────────────────────────────────────────────┤[39m
[90m│[39m DEPLOY_SERVICE_STEP_FUNCTION_NAME             [90m│[39m development [90m│[39m severus    [90m│[39m Friday, July 12th, 2019, 12:21:37 AM (GMT+0000)      [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼──────────────────────────────────────────────────────┤[39m
[90m│[39m GRAPHQL_ENDPOINT                              [90m│[39m all         [90m│[39m serious    [90m│[39m Thursday, November 29th, 2018, 9:26:47 PM (GMT+0000) [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼──────────────────────────────────────────────────────┤[39m
[90m│[39m PAGERDUTY_E2E_STEP_FUNCTION_INTEGRATION_TOKEN [90m│[39m all         [90m│[39m rubeus     [90m│[39m Monday, April 13th, 2020, 10:49:25 PM (GMT+0000)     [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼──────────────────────────────────────────────────────┤[39m
[90m│[39m PAGERDUTY_E2E_TEST_FAILURES_INTEGRATION_TOKEN [90m│[39m all         [90m│[39m rubeus     [90m│[39m Tuesday, April 21st, 2020, 9:32:08 PM (GMT+0000)     [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼──────────────────────────────────────────────────────┤[39m
[90m│[39m PHABRICATOR_CONDUIT_TOKEN                     [90m│[39m all         [90m│[39m serious    [90m│[39m Friday, November 23rd, 2018, 7:25:09 PM (GMT+0000)   [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼──────────────────────────────────────────────────────┤[39m
[90m│[39m PRISMA_MANAGEMENT_API_SECRET                  [90m│[39m all         [90m│[39m serious    [90m│[39m Tuesday, January 22nd, 2019, 8:46:29 PM (GMT+0000)   [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼──────────────────────────────────────────────────────┤[39m
[90m│[39m SENTRY_DSN                                    [90m│[39m all         [90m│[39m serious    [90m│[39m Friday, November 23rd, 2018, 7:27:19 PM (GMT+0000)   [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼──────────────────────────────────────────────────────┤[39m
[90m│[39m SENTRY_ENVIRONMENT                            [90m│[39m all         [90m│[39m serious    [90m│[39m Sunday, November 25th, 2018, 9:11:45 PM (GMT+0000)   [90m│[39m
[90m└───────────────────────────────────────────────[39m[90m┴─────────────[39m[90m┴────────────[39m[90m┴──────────────────────────────────────────────────────┘[39m"
`;

exports[`listParameters request fails 1`] = `""`;
